@@ -327,7 +327,7 @@ public class MethodUtilsTest extends AbstractLangTest {
 
     @Test
     public void testConstructor() throws Exception {
-        assertNotNull(MethodUtils.class.newInstance());
+        assertNotNull(MethodUtils.class.getConstructor().newInstance());
     }
 
     @Test
